[metadata]
name = falcon-oas
description = OpenAPI 3 support for Falcon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grktsh/falcon-oas
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
setup_requires =
    setuptools-scm
    pytest-runner
install_requires =
    falcon ~= 1.4
    jsonref ~= 0.2
    jsonschema ~= 2.6
    six ~= 1.11
    functools32 ~= 3.2; python_version == '2.7'

[options.extras_require]
format =
    pyrfc3339 ~= 1.1
    rfc3986 ~= 1.1
test =
    pytest
    pytest-cov
    pytest-mock
    pytest-xdist
    pyyaml

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[coverage:run]
branch = True
omit =
    src/falcon_oas/__version__.py

[coverage:report]
show_missing = True

[flake8]
ignore =
    E203
    W503
