[metadata]
name = falcon-oas
description = OpenAPI 3 support for Falcon
long_description = file: README.rst
url = https://github.com/grktsh/falcon-oas
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    falcon ~= 1.4
    jsonref ~= 0.2
    jsonschema ~= 2.6
    six ~= 1.11
    functools32 ~= 3.2; python_version == '2.7'

[options.extras_require]
format =
    pyrfc3339 ~= 1.1
    rfc3986 ~= 1.1
test =
    pytest
    pytest-cov
    pytest-mock
    pytest-xdist
    pyyaml

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
parallel = True
source =
    falcon_oas

[coverage:paths]
source =
    src
    */site-packages

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = tests

[flake8]
ignore =
    E203
    W503
