[metadata]
name = falcon-oas
description = Design first approach with OpenAPI 3 for Falcon
long_description = file: README.rst
url = https://github.com/grktsh/falcon-oas
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    = src
install_requires =
    falcon >= 1.4, < 3
    oas ~= 0.1.0
    six ~= 1.11

[options.extras_require]
test =
    pytest ~= 4.4
    pytest-cov ~= 2.6
    pytest-mock ~= 1.10
    pytest-xdist ~= 1.28
    pyyaml ~= 5.1

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
parallel = True
source =
    falcon_oas

[coverage:paths]
source =
    src
    */site-packages

[coverage:report]
show_missing = True

[tool:pytest]
testpaths = tests

[flake8]
ignore =
    E203
    W503
